<resources>
    <string name="app_name">BoardGame MeetUp</string>

    //MENU AND NAVIGATION
    <string name="home_title">Home</string>
    <string name="games_title">Games</string>
    <string name="sessions_title">Sessions</string>
    <string name="map_title">Map</string>
    <string name="welcome_title">Welcome</string>
    <string name="favorites_title">Favorites</string>
    <string name="login_title">Log in</string>
    <string name="logout_title">Log out</string>
    <string name="about_title">About app</string>
    <string name="language_title">Language</string>
    <string name="acc_settings_title">Account settings</string>

    //HOME PAGE
    <string name="button_games_text">Check out your game collection!</string>
    <string name="button_sessions_text">Join game session!</string>
    <string name="button_welcome_text">Go back to the welcome page [LOG OUT]</string>
    <string name="welcome_text">Hello!\n What would you like to do today?</string>
    <string name="deco">Deco</string>
    <string name="map">Map</string>
    <string name="search_place">Search for a place</string>

    //GAME AND SESSION
    <string name="button_add_session">Nothing interesting here? Create your own game session!</string>
    <string name="button_create_session">Create session!</string>
    <string name="button_new_game">Is something missing? Add new game!</string>
    <string name="button_add_game">Add game!</string>
    <string name="designer">Designer</string>
    <string name="max_players">Max players</string>
    <string name="place">Place</string>
    <string name="game_name">Game name</string>
    <string name="image_url">Image URL</string>
    <string name="button_favorites">Heart</string>

    //LOGIN AND REGISTER
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="register">Register</string>
    <string name="login_here">Already registered? Log in here</string>
    <string name="register_here">"Don't have an account? Register here"</string>

    //WELCOME PAGE
    <string name="welcome">WELCOME TO</string>
    <string name="guest">As a guest, you can:</string>
    <string name="check_games">Check out available games</string>
    <string name="check_map">Check out map with places to play</string>
    <string name="discover">To discover more:</string>
    <string name="logo">Logo</string>
    <string name="settings">Settings</string>

    <string name="back">Go back to welcome page</string>

    //SETTINGS PAGE
    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="about_app_button">About app</string>
    <string name="account_settings_button">Account settings</string>
    <string name="language_list">Select your language:</string>

    //ABOUT APP PAGE
    <string name="dev">Developer name: Zuzanna Augustyniak</string>
    <string name="back_settings">Go back to settings page</string>
    <string name="photo">Photo</string>

    //ACCOUNT SETTINGS PAGE
    <string name="user">User: Name</string>
    <string name="user_mail">user@gmail.com</string>

    //NAV
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="choose_game_prompt">Choose game from the list:</string>
    <string name="session_detail_title">Session detail</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="favorite">Favorite</string>
    <string name="date">Date</string>

    <string name="date_input">Date [MM/DD/YYYY]</string>

</resources>