<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/editTextGameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/game_name"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/place"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/date_input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/price"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonCreateSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_green"
        android:text="@string/button_create_session" />

</LinearLayout>
