<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/editTextGameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/game_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextMaxPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/max_players"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextDesigner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/designer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/image_url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonAddGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/dark_green"
        android:text="@string/button_add_game" />
</LinearLayout>
