<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LanguageActivity">

    <!-- Main content layout -->
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/language_title" />

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="370dp"
            android:layout_height="101dp"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/languageListTextView"
            android:layout_width="143dp"
            android:layout_height="27dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/bright_green"
            android:gravity="center"
            android:text="@string/language_list" />

        <!-- Checkboxes for Languages -->
        <CheckBox
            android:id="@+id/checkBoxEnglish"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@id/languageListTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/english" />

        <CheckBox
            android:id="@+id/checkBoxPortuguese"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@id/checkBoxEnglish"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/portuguese" />

        <CheckBox
            android:id="@+id/checkBoxPolish"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@id/checkBoxPortuguese"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/polish" />

    </RelativeLayout>

    <!-- NavigationView for drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
