<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginTop="32dp"
    android:orientation="vertical"
    android:background="@color/light_green">

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/user_mail"
        android:textSize="16sp"
        android:textColor="@color/dark_green"
        android:layout_marginTop="8dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:shadowDx="2"
        android:shadowDy="2"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/dice_logo"
        android:contentDescription="@string/logo" />

</LinearLayout>
