<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_games"
        app:layout_constraintEnd_toStartOf="@+id/deco"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <ImageView
        android:id="@+id/deco"
        android:layout_width="156dp"
        android:layout_height="272dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/deco"
        android:src="@drawable/deco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/button_games"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="79dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/button_games_text"
        app:layout_constraintBottom_toTopOf="@+id/button_sessions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deco" />

    <Button
        android:id="@+id/button_sessions"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/button_sessions_text"
        app:layout_constraintBottom_toTopOf="@+id/button_welcome_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_games" />

    <Button
        android:id="@+id/button_welcome_page"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/button_welcome_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sessions"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="286dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/logout"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/deco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/navigation"
        layout="@layout/bottomnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>